# pharmacodynamics

./: README.md  bindingApp.drawio  load_raw_binding_data_test.ipynb  pyproject.toml  setup.py
BindOps/: __init__.py  bindMods.py  load_raw_binding_data_test.py
BindOps.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
PharmOps/: __init__.py  __main__.py  bindMods.py  gui.py  guitools.py  guitools_class.py  import tkinter as tk.py  io.py  ki_test.ipynb  summary.py  test.py
PharmOps.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sample data/: 011224_CB1 BIND ANALYSIS NVW.xlsx  110823 DOR, hMOR, KOR bind.xlsx  110824_raw data.txt  20240208_1.xlsx  20241115_Delta-9-THC_CB1_Binding-Affinity.prism  20241115_Delta-9-THC_CB1_Binding-Affinity_Template.xlsx  20241115_Delta-9-THC_CB1_Functional-Activity.prism  20241115_Delta-9-THC_EC50-Table.xlsx  20241115_Delta-9-THC_KI Table.xlsx  Binding Template for RAW transformations.xlsx  testH5.h5
sample data/summary table/: 34486 DAR 5HTR report Oct 2024.docx  5HTR IP1 FXN AVE Table 34485-94.xlsx  5HTR KI table 34485-34494.xls  5HTR KI table 34485-34494.xlsx  D1 AC Aves NIDA 34488 June 2024.xlsx  D2 D3 Mita Avs 34485-494 NIDA Mar 2024.xlsx  D4 AC EC50 Apr 2024.xlsx  DAR Ki values 34485-494.xlsx  EC50 Table 5HT1A 35s GTP 34485-34494.xlsx
